@@ -96,9 +96,8 @@ public class SecurityConfig {
 
 		config.setAllowCredentials(true);
 		config.setAllowedOrigins(List.of("http://localhost:3000","https://api.singsongsangsong.com","https://www.singsongsangsong.com"));
-		// config.setAllowedOriginPatterns(Arrays.asList("https://www.singsongsangsong.com"));
 		config.setAllowedMethods(Arrays.asList("HEAD","POST","GET","DELETE","PUT","OPTIONS"));
-		config.setAllowedHeaders(Arrays.asList("DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"));
+		config.setAllowedHeaders(List.of("*"));
 		config.setMaxAge(1000L);
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", config);
